--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Test the Docker image
       run: ls -la
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file system_info_app/Dockerfile  --tag my-image-name:$(date +%s)
 
 #    - name: call-reusable
 #      uses: org/reusable-workflows/.github/workflows/deploy.yml@v1
