--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   call-reusable:
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/docker-publish.yml@main
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/docker-publish.yml@v1
     with:
       python_version: '3.11'
     secrets:
