--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,16 +1,7 @@
-name: Docker Image CI
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
   call-reusable:
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/docker-publish.yml@v1
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/deploy.yml@main
     with:
       python_version: '3.11'
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
-     
