--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -1,10 +1,10 @@
-name: Docker Image CI
+name: Deploy using Reusable Workflow
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   call-reusable:
