--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -14,6 +14,6 @@ jobs:
 
     secrets:
       # Solo el token es secreto
-      REGISTRY_TOKEN: ${{ secrets.GH.TOKEN }}
+      REGISTRY_TOKEN: ${{ secrets.GH_TOKEN}}
 
  
