--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -9,7 +9,7 @@ jobs:
   example-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
+      - name: Check repository out
         uses: actions/checkout@v5
       - name: Run a one-line script
         run: echo "This is a workflow triggered by a pull request to main from a feature branch!"
