--- a/local/Makefile
+++ b/local/Makefile
@@ -52,6 +52,8 @@ help:
 	@echo "$(COLOR_BOLD)🧪 Testing y calidad:$(COLOR_RESET)"
 	@echo "  $(COLOR_GREEN)make test$(COLOR_RESET)        - Ejecutar suite de tests"
 	@echo "  $(COLOR_GREEN)make check-docker$(COLOR_RESET) - Verificar Docker instalado"
+	@echo "  $(COLOR_GREEN)make network-info$(COLOR_RESET)   - Muestra la información de red del contenedor"
+	@echo "  $(COLOR_GREEN)make dns-info$(COLOR_RESET)       - Muestra el DNS configurado dentro del contenedor"
 	@echo ""
 	@echo "$(COLOR_BOLD)🧹 Mantenimiento:$(COLOR_RESET)"
 	@echo "  $(COLOR_GREEN)make clean$(COLOR_RESET)       - Limpieza completa"
@@ -130,6 +132,23 @@ stats:
 shell:
 	@echo "$(COLOR_BLUE)🐚 Abriendo shell en contenedor...$(COLOR_RESET)"
 	@$(DOCKER_COMPOSE) exec web bash || $(DOCKER_COMPOSE) exec web sh
+
+
+COLOR_BLUE = \033[1;34m
+COLOR_RESET = \033[0m
+CONTAINER_NAME = local-system_info_app-1
+
+network-info:
+	@echo "$(COLOR_BLUE)🌐 Mostrando información de red del contenedor $(CONTAINER_NAME)...$(COLOR_RESET)"
+	@docker inspect -f 'Nombre: {{.Name}} \
+	\nID: {{.Id}} \
+	\nIP: {{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}} \
+	\nPuerta de enlace: {{range .NetworkSettings.Networks}}{{.Gateway}}{{end}} \
+	\nDNS: {{.HostConfig.Dns}}' $(CONTAINER_NAME)
+
+dns-info:
+	@echo "📡 Mostrando DNS configurado dentro del contenedor $(CONTAINER_NAME)..."
+	@docker exec -t $(CONTAINER_NAME) cat /etc/resolv.conf
 
 # ==================== TESTING ====================
 test:
