--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -10,6 +10,6 @@ jobs:
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/docker-publish.yml@main
     with:
       docker_image: flask-info-app
-      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      dockerhub_username: dariasmoises979  
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
