--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -13,3 +13,20 @@ jobs:
       dockerhub_username: dariasmoises979  
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  create-pr:
+        needs: build-and-pr
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout code
+            uses: actions/checkout@v4
+    
+          - name: Create Pull Request
+            uses: peter-evans/create-pull-request@v6
+            with:
+              token: ${{ secrets.GITHUB_TOKEN }}
+              branch: develop
+              base: main
+              title: "Auto PR: merge develop into main"
+              body: |
+                Este PR fue creado automáticamente por el workflow de Build & Publish.
