--- a/.github/workflows/pipeline-base.yml
+++ b/.github/workflows/pipeline-base.yml
@@ -6,6 +6,23 @@ on:
       - main  # rama de destino del PR
 
 jobs:
+  create-pr:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Create Pull Request to main
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: main
+          title: "Auto PR from ${{ github.ref_name }}"
+          body: "Este Pull Request fue creado automáticamente desde la rama `${{ github.ref_name }}`."
+          branch: ${{ github.ref_name }} # la rama actual (feature/*)
+
+
   call-reusable:
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/docker-publish.yml@main
     with:
