--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,9 +12,9 @@ jobs:
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/test.yml@main
    
   create-pr:
-    name: Create PR to build branch
+    name: Create PR from feature to dev
     needs: test
-    if: ${{ success() }}
+    if: ${{ success() && startsWith(github.ref, 'refs/heads/feature/') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -23,14 +23,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for all branches
+          fetch-depth: 0
           
-      - name: Create Pull Request to build branch
+      - name: Create Pull Request to dev branch
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: feature/**
+          branch: ${{ github.ref_name }}
           base: dev
-          title: "Promote dev → build"
-          body: "✅ Tests passed successfully after push to main. Ready for build."
-          commit-message: "Promote dev to build"
+          title: "Merge ${{ github.ref_name }} → dev"
+          body: |
+            ✅ Tests passed successfully on `${{ github.ref_name }}`
+            
+            **Branch:** `${{ github.ref_name }}`
+            **Target:** `dev`
+            **Commit:** ${{ github.sha }}
+          commit-message: "Merge ${{ github.ref_name }} to dev"
