--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main 
-      - feature/** # se ejecuta cuando hay un push a main
+      - feature/**
 
 jobs:
   test:
@@ -14,7 +14,7 @@ jobs:
   create-pr:
     name: Create PR from feature to dev
     needs: test
-    if: ${{ success() && startsWith(github.ref, 'refs/heads/feature/') }} #Este job espera a que termine otro job llamado "test". Solo se ejecuta si "test" termina.
+    if: ${{ success() && startsWith(github.ref, 'refs/heads/feature/') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -26,23 +26,36 @@ jobs:
           fetch-depth: 0
           
       - name: Create Pull Request to dev branch
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref_name }}
-          base: dev
-          title: "Merge ${{ github.ref_name }} → dev"
-          body: |
-            ✅ Tests passed successfully on `${{ github.ref_name }}`
-            
-            **Branch:** `${{ github.ref_name }}`
-            **Target:** `dev`
-            **Commit:** ${{ github.sha }}
-          commit-message: "Merge ${{ github.ref_name }} to dev"
-
-      - name: Auto-merge PR
-        if: steps.cpr.outputs.pull-request-number
-        run: |
-          gh pr merge ${{ steps.cpr.outputs.pull-request-number }} --auto --squash
+        id: create-pr
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Verificar si ya existe un PR abierto
+          existing_pr=$(gh pr list --base dev --head ${{ github.ref_name }} --state open --json number --jq '.[0].number')
+          
+          if [ -z "$existing_pr" ]; then
+            # Crear el PR si no existe
+            pr_number=$(gh pr create \
+              --base dev \
+              --head ${{ github.ref_name }} \
+              --title "Merge ${{ github.ref_name }} → dev" \
+              --body "✅ Tests passed successfully on \`${{ github.ref_name }}\`
+            
+            **Branch:** \`${{ github.ref_name }}\`
+            **Target:** \`dev\`
+            **Commit:** ${{ github.sha }}" \
+              --json number --jq '.number')
+            echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+            echo "✅ PR #$pr_number created"
+          else
+            echo "pr_number=$existing_pr" >> $GITHUB_OUTPUT
+            echo "ℹ️ PR #$existing_pr already exists"
+          fi
+
+      - name: Auto-merge PR
+        if: steps.create-pr.outputs.pr_number
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr merge ${{ steps.create-pr.outputs.pr_number }} --auto --squash
+          echo "✅ Auto-merge enabled for PR #${{ steps.create-pr.outputs.pr_number }}"
