--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,12 +1,12 @@
-name: Run Unit Tests
+name: Run Qa Tests
 
 on:
   push:
     branches:
-      - main 
-      - feature/**
+      - dev
+      - qa/**
 
 jobs:
   test:
-    name: Run Unit Tests
+    name: Run Qa Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/qa.yml@main
