--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -2,6 +2,8 @@ permissions:
   actions: read
   contents: read
   security-events: write
+  pull-requests: write
+
 
 name: Run Qa Tests
 
@@ -27,17 +29,19 @@ jobs:
       steps:
         - name: Checkout repository
           uses: actions/checkout@v4
+          with:
+            fetch-depth: 0  # Necesario para crear el PR correctamente
   
         - name: Create Pull Request
           uses: peter-evans/create-pull-request@v6
           with:
             token: ${{ secrets.GITHUB_TOKEN }}
-            branch: qa
-            base: integration
+            branch: qa                # Rama origen
+            base: main                # Rama destino
             title: "QA Approval Request - $(date +'%Y-%m-%d')"
             body: |
               🚀 Los tests en QA han finalizado correctamente.
-              
+  
               Por favor, revisa y aprueba este PR para mergear los cambios a **main**.
             draft: false
             delete-branch: false
