--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Create Pull Request to Integration
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           base: integration                        # rama destino
           branch: qa-${{ steps.vars.outputs.sha_short }}   # rama temporal
           title: "QA Passed - Commit ${{ steps.vars.outputs.sha_short }}"
