--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -20,7 +20,7 @@ jobs:
     #  branch: "qa"
 
   create-pr:
-    name: Create Pull Request for QA Approval
+    name: Create Pull Request for QA Manual Merge
     needs: test
     if: ${{ needs.test.result == 'success' }}   # solo si los tests pasan
     runs-on: ubuntu-latest
@@ -38,15 +38,17 @@ jobs:
       - name: Create Pull Request to Integration
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GH_TOKEN }}
-          base: integration                        # rama destino
-          branch: qa-${{ steps.vars.outputs.sha_short }}   # rama temporal
+          token: ${{ secrets.GH_TOKEN }}             # tu token personal
+          base: integration                          # rama destino
+          branch: qa-${{ steps.vars.outputs.sha_short }}  # rama temporal
           title: "QA Passed - Commit ${{ steps.vars.outputs.sha_short }}"
           body: |
             ✅ Los tests en QA han finalizado correctamente.
 
             Commit asociado: `${{ steps.vars.outputs.sha_short }}`
 
-            Por favor, revisa y aprueba este PR para mergear los cambios a **integration**.
+            Este PR fue creado automáticamente luego de pasar las pruebas de QA.
+
+            Por favor, revisa y aprueba para mergear los cambios a **integration** de forma manual.
           draft: false
           delete-branch: true
