--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -24,3 +24,34 @@ jobs:
     #  sonar-token: ${{ secrets.SONAR_TOKEN }}
     #  branch: "qa"
 
+  create-pr-to-integration:
+    name: Create Pull Request from QA to Integration (manual approval)
+    needs: create-pr-to-qa
+    if: ${{ needs.create-pr-to-qa.result == 'success' }}
+    runs-on: ubuntu-latest
+  
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+  
+      - name: Get commit short SHA
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+  
+      - name: Create Pull Request from qa to integration
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          base: integration
+          branch: qa
+          title: "Promote QA → Integration - Commit ${{ steps.vars.outputs.sha_short }}"
+          body: |
+            ✅ Los tests de QA fueron exitosos.
+  
+            Este PR promueve los cambios a **integration**.
+  
+            Por favor, revisa y aprueba para continuar el flujo.
+          draft: false
+          delete-branch: false
