--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -40,89 +40,42 @@ jobs:
           git push origin dev
 ########################################3
 
+  # Workflow: Crea automáticamente un Pull Request desde QA hacia Integration
+  # cuando el merge a dev fue exitoso y las pruebas pasaron correctamente.
+
   create-pr:
     name: Create Pull Request for QA Manual Merge 
-    needs: merge-to-dev
-    if: ${{ needs.test.result == 'success' }}
-    runs-on: ubuntu-latest
+    needs: merge-to-dev                # Espera que el job "merge-to-dev" termine antes
+    if: ${{ needs.test.result == 'success' }}  # Solo se ejecuta si el job "test" tuvo éxito
+    runs-on: ubuntu-latest             # Se ejecuta en un runner Ubuntu
 
     steps:
+    # Paso 1: Checkout del repositorio
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        ref: dev
-        fetch-depth: 0
+        ref: dev                       # Se asegura de usar la rama "dev"
+        fetch-depth: 0                 # Obtiene todo el historial (necesario para PRs completos)
 
+    # Paso 2: Obtener el SHA corto del último commit
     - name: Get commit short SHA
       id: vars
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      # Guarda el SHA corto como variable para usarlo después en el título del PR
 
+    # Paso 3: Crear el Pull Request de QA hacia Integration
     - name: Create Pull Request QA → Integration
       uses: peter-evans/create-pull-request@v6
       with:
-        token: ${{ secrets.GH_TOKEN2 }}
-        base: integration
-        branch: qa
+        token: ${{ secrets.GH_TOKEN2 }}   # Usa un token con permisos para crear el PR
+        base: integration                 # Rama destino del PR
+        branch: qa                        # Rama origen del PR
         title: "QA Approval Needed - Commit ${{ steps.vars.outputs.sha_short }}"
-        body: |
+        body: |                           # Mensaje que aparecerá dentro del PR
           🚀 Se creó este PR automáticamente desde **dev** hacia **qa** después de un merge exitoso desde feature.
 
           Commit asociado: `${{ steps.vars.outputs.sha_short }}`
 
           Por favor, revisa y aprueba este PR para continuar el flujo hacia **integration**.
-        draft: false
-        delete-branch: false
-
-
-          
-
-          
-
-  # create-pr:
-  #   name: Create PR from feature to dev
-  #   needs: test
-  #   if: ${{ success() && startsWith(github.ref, 'refs/heads/feature/') }}
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: write
-  #     pull-requests: write
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-          
-  #     - name: Create Pull Request to dev branch
-  #       id: create-pr
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       run: |
-  #         # Verificar si ya existe un PR abierto
-  #         existing_pr=$(gh pr list --base dev --head ${{ github.ref_name }} --state open --json number --jq '.[0].number')
-          
-  #         if [ -z "$existing_pr" ]; then
-  #           # Crear el PR si no existe
-  #           pr_number=$(gh pr create \
-  #             --base dev \
-  #             --head ${{ github.ref_name }} \
-  #             --title "Merge ${{ github.ref_name }} → dev" \
-  #             --body "✅ Tests passed successfully on \`${{ github.ref_name }}\`
-            
-  #           **Branch:** \`${{ github.ref_name }}\`
-  #           **Target:** \`dev\`
-  #           **Commit:** ${{ github.sha }}" \
-  #             --json number --jq '.number')
-  #           echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
-  #           echo "✅ PR #$pr_number created"
-  #         else
-  #           echo "pr_number=$existing_pr" >> $GITHUB_OUTPUT
-  #           echo "ℹ️ PR #$existing_pr already exists"
-  #         fi
-
-  #     - name: Auto-merge PR
-  #       if: steps.create-pr.outputs.pr_number
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       run: |
-  #         gh pr merge ${{ steps.create-pr.outputs.pr_number }} --auto --squash
-  #         echo "✅ Auto-merge enabled for PR #${{ steps.create-pr.outputs.pr_number }}"
+        draft: false                      # El PR no es un borrador
+        delete-branch: false              # No borra la rama "qa" después del PR
